feat: added the main controller